k8s/applications/catalog/sure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sure
  labels:
    app.kubernetes.io/name: sure
